# GoldenEye-Recomp-Watch-Music-Fix

./: .gitignore  LICENSE  NOTICE.md  README.md
legacy-v1/: README.md
legacy-v1/installer/: Install Watch Music Fix.bat  Install-WatchMusicFix.ps1
legacy-v1/source/: CMakeLists.txt  ge_hooks.cpp
patches/: goldeneye-community-fixes-v2.1.0.patch  native-xact-audio-v2.0.0.patch  native-xact-audio-v2.0.1.patch
source/: README.md  ge_config.toml  ge_hooks.cpp
